--- a/BSMM2/BSMM2/Views/AddPlayerPage.xaml
+++ b/BSMM2/BSMM2/Views/AddPlayerPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:prop="clr-namespace:BSMM2.Resource"
 			 x:Class="BSMM2.Views.AddPlayerPage"
 			 xmlns:local="clr-namespace:BSMM2.ViewModels"
 			  Title="{Binding Title}"
@@ -11,7 +12,7 @@
 	<ContentPage.Content>
 		<StackLayout>
 			<Editor Text="{Binding Data}" HeightRequest="256"  BackgroundColor="Aqua" />
-			<Button Text="Add" Command ="{Binding AddPlayerCommand}" />
+			<Button Text="{x:Static prop:AppResources.ButtonAdd}" Command ="{Binding AddPlayerCommand}" />
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
