--- a/BSMM2/BSMM2/Views/JsonPage.xaml
+++ b/BSMM2/BSMM2/Views/JsonPage.xaml
@@ -1,24 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:prop="clr-namespace:BSMM2.Resource"
 			 x:Class="BSMM2.Views.JsonPage"
 			 xmlns:local="clr-namespace:BSMM2.ViewModels"
 			 Title="{Binding Name}">
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="Back" Clicked="Back" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuBack}" Clicked="Back" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
 			<StackLayout Orientation="Horizontal">
-				<Label Text="As Current Game" />
+				<Label Text="{x:Static prop:AppResources.LabelNewGameAsCurrentGame}" />
 				<CheckBox IsChecked="{Binding AsCurrentGame}" />
 			</StackLayout>
 			<Editor Text="{Binding Buf}" HeightRequest="512" />
 			<StackLayout Orientation="Horizontal">
-				<Button Text="Export" Command="{Binding ExportCommand}" HorizontalOptions="FillAndExpand" />
-				<Button Text="Import" Command="{Binding ImportCommand}" HorizontalOptions="FillAndExpand" />
-				<Button Text="Clear" Command="{Binding ClearCommand}" HorizontalOptions="FillAndExpand" />
-				<Button Text="Send Mail" Command="{Binding SendByMailCommand}" HorizontalOptions="FillAndExpand" />
+				<Button Text="{x:Static prop:AppResources.MenuExport}" Command="{Binding ExportCommand}" HorizontalOptions="FillAndExpand" />
+				<Button Text="{x:Static prop:AppResources.MenuImport}" Command="{Binding ImportCommand}" HorizontalOptions="FillAndExpand" />
+				<Button Text="{x:Static prop:AppResources.MenuClear}" Command="{Binding ClearCommand}" HorizontalOptions="FillAndExpand" />
+				<Button Text="{x:Static prop:AppResources.MenuSendMail}" Command="{Binding SendByMailCommand}" HorizontalOptions="FillAndExpand" />
 			</StackLayout>
 		</StackLayout>
 	</ContentPage.Content>
