--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -1,20 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:prop="clr-namespace:BSMM2.Resource"
 			 x:Class="BSMM2.Views.PlayersPage"
 			  Title="{Binding Title}"
 			 x:Name="BrowseItemsPage">
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="New Game" Command="{Binding NewGameCommand}" Order="Secondary" />
-		<ToolbarItem Text="Rule" Command="{Binding RuleCommand}" Order="Secondary" />
-		<ToolbarItem Text="Select Game" Command ="{Binding SelectGameCommand}" Order="Secondary" />
-		<ToolbarItem Text="Delete Game" Command ="{Binding DeleteGameCommand}" Order="Secondary" />
-		<ToolbarItem Text="AddPlayer" Command="{Binding AddPlayerCommand}" Order="Secondary" />
-		<ToolbarItem Text="Export Players" Command="{Binding ExportPlayersCommand}" Order="Secondary" />
-		<ToolbarItem Text="Json" Clicked="OpenJsonPage" Order="Secondary" />
-		<ToolbarItem Text="Settings" Clicked="OpenSettingsPage" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuNewGame}" Command="{Binding NewGameCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuSettingRule}" Command="{Binding RuleCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuSelectGame}" Command ="{Binding SelectGameCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuDeleteGame}" Command ="{Binding DeleteGameCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuAddPlayer}" Command="{Binding AddPlayerCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuExport}" Command="{Binding ExportPlayersCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuJson}" Clicked="OpenJsonPage" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuSetting}" Clicked="OpenSettingsPage" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuSave}" Clicked="OpenSettingsPage" Order="Secondary" />
 		<!--ToolbarItem Text="Log" Clicked="Log" Order="Secondary" /-->
-		<ToolbarItem Text="Help" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuHelp}" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
