--- a/BSMM2/BSMM2/Views/SettingsPage.xaml
+++ b/BSMM2/BSMM2/Views/SettingsPage.xaml
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:prop="clr-namespace:BSMM2.Resource"
 			 x:Class="BSMM2.Views.SettingsPage"
 			 xmlns:local="clr-namespace:BSMM2.ViewModels"
-			 Title="{Binding Name}">
+			 Title="{x:Static prop:AppResources.MenuSetting}">
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="Back" Clicked="Back" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuBack}" Clicked="Back" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
 			<StackLayout Orientation="Horizontal">
-				<Label Text="Auto Save" VerticalOptions="Center" />
+				<Label Text="{x:Static prop:AppResources.LabelAutoSave}" VerticalOptions="Center" />
 				<CheckBox IsChecked="{Binding AutoSave}" />
 			</StackLayout>
-			<Label Text="Mail Address:" />
+			<Label Text="{x:Static prop:AppResources.LabelMailAddress}" />
 			<Editor Text="{Binding MailAddress}" />
+			<Label Text="{x:Static prop:AppResources.LabelCulture}" />
+			<Picker x:Name="Culture"
+				SelectedItem="{Binding Culture}">
+				<Picker.ItemsSource>
+					<x:Array Type="{x:Type x:String}">
+						<x:String>en-US</x:String>
+						<x:String>ja-JP</x:String>
+					</x:Array>
+				</Picker.ItemsSource>
+			</Picker>
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
