--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -12,9 +12,9 @@
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuDeleteGame}" Command ="{Binding DeleteGameCommand}" Order="Secondary" />
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuAddPlayer}" Command="{Binding AddPlayerCommand}" Order="Secondary" />
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuExport}" Command="{Binding ExportPlayersCommand}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuSave}" Command="{Binding SaveCommand}" Order="Secondary" />
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuJson}" Clicked="OpenJsonPage" Order="Secondary" />
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuSetting}" Clicked="OpenSettingsPage" Order="Secondary" />
-		<ToolbarItem Text="{x:Static prop:AppResources.MenuSave}" Clicked="OpenSettingsPage" Order="Secondary" />
 		<!--ToolbarItem Text="Log" Clicked="Log" Order="Secondary" /-->
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuHelp}" Order="Secondary" />
 	</ContentPage.ToolbarItems>
