--- a/BSMM2/BSMM2/Views/NewGamePage.xaml
+++ b/BSMM2/BSMM2/Views/NewGamePage.xaml
@@ -30,15 +30,16 @@
 			<Label Text="{x:Static prop:AppResources.LabelNewGamePlayerPrefix}"  IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=Number}" />
 			<Editor Text="{Binding Prefix}" Margin="0" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=Number}" />
 			<Label Text="{x:Static prop:AppResources.LabelNewGameNumberOfPlayer}"  IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=Number}" />
-			<Editor Text="{Binding PlayerCount}" Keyboard="Numeric" Margin="0" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=Number}" />
+			<Entry Text="{Binding PlayerCount}" Keyboard="Numeric" Margin="0" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=Number}" />
 			<Label Text="{x:Static prop:AppResources.LabelNewGameEntrySheet}" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
-			<Editor Text="{Binding EntrySheet}" HeightRequest="256"  BackgroundColor="Aqua" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
+			<Label Text="{x:Static prop:AppResources.DescriptionEntrySheet}" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
+			<Editor Text="{Binding EntrySheet}" HeightRequest="256"  IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
 			<StackLayout Orientation="Horizontal">
-				<CheckBox IsChecked="{Binding Rule.EnableLifePoint}" />
+				<Switch IsToggled="{Binding Rule.EnableLifePoint}" />
 				<Label Text="{x:Static prop:AppResources.LabelNewGameEnableLifePoint}" VerticalOptions="Center" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal">
-				<CheckBox IsChecked="{Binding AsCurrentGame}" />
+				<Switch IsToggled="{Binding AsCurrentGame}" />
 				<Label Text="{Binding TextAsCurrentGame}" VerticalOptions="Center" />
 			</StackLayout>
 			<Button Text="{x:Static prop:AppResources.ButtonCreate}" Command="{Binding CreateCommand}" />
