--- a/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
@@ -49,7 +49,7 @@
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="1" BackgroundColor="LightGray">
+			<Grid Grid.Row="1" IsVisible="{Binding IsVisible2nd}"  BackgroundColor="LightGray">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -82,7 +82,7 @@
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="2">
+			<Grid Grid.Row="2" IsVisible="{Binding IsVisible3rd}">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
