--- a/BSMM2/BSMM2/Views/RoundPage.xaml
+++ b/BSMM2/BSMM2/Views/RoundPage.xaml
@@ -8,7 +8,7 @@
 			 x:Name="BrowseItemsPage">
 	<ContentPage.ToolbarItems>
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuRoundLog}" Command="{Binding ShowRoundsLogCommand}" Order="Secondary" />
-		<ToolbarItem Text="{x:Static prop:AppResources.MenuHelp}" Order="Secondary" />
+		<ToolbarItem Text="{x:Static prop:AppResources.MenuHelp}" Clicked="OpenHelpPage" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Resources>
 		<local:RoundResultConverter x:Key="Converter" />
