--- a/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
@@ -2,11 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:prop="clr-namespace:BSMM2.Resource"
+			 xmlns:local="clr-namespace:BSMM2.Models.Matches.MultiMatch.ThreeGameMatch"
 			 x:Class="BSMM2.Models.Matches.MultiMatch.ThreeGameMatch.ThreeGameMatchPage"
 			 Title="{x:Static prop:AppResources.ItemRuleThreeGameMatch}">
 	<ContentPage.ToolbarItems>
 		<ToolbarItem Text="{x:Static prop:AppResources.MenuBack}" Clicked="Back" Order="Secondary" />
 	</ContentPage.ToolbarItems>
+	<ContentPage.Resources>
+		<local:TheConverter x:Key="TheConverter" />
+	</ContentPage.Resources>
 	<ContentPage.Content>
 		<Grid>
 			<Grid.RowDefinitions>
@@ -49,7 +53,7 @@
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="1" IsVisible="{Binding IsVisible2nd}"  BackgroundColor="LightGray">
+			<Grid Grid.Row="1" IsVisible="{Binding ResultItem[0], Converter={StaticResource TheConverter}}"  BackgroundColor="LightGray">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -82,7 +86,7 @@
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="2" IsVisible="{Binding IsVisible3rd}">
+			<Grid Grid.Row="2" IsVisible="{Binding ResultItem[1], Converter={StaticResource TheConverter}}">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
