--- a/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/MultiMatch/ThreeGameMatch/ThreeGameMatchPage.xaml
@@ -35,25 +35,25 @@
 				<Label Text="{x:Static prop:AppResources.TextResult}" Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" />
 				<Label Text="{x:Static prop:AppResources.TextLifePoint}" Grid.Row="0" Grid.Column="1" FontSize="Medium" VerticalTextAlignment="Center" IsVisible="{Binding EnableLifePoint}" />
 				<Label Text="{x:Static prop:AppResources.Label1stMatch}" Grid.Row="0" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItem[0].Player1Win}" />
+				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItems[0].Player1Win}" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="1" Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player1LP[0]}"
+					SelectedItem="{Binding Player1LPs[0]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player1.Name}" Grid.Row="1" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItem[0].Draw}" />
+				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItems[0].Draw}" />
 				<Label Text="Draw" Grid.Row="2"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch IsToggled="{Binding ResultItem[0].Player2Win}" Grid.Row="3"  Grid.Column="0" />
+				<Switch IsToggled="{Binding ResultItems[0].Player2Win}" Grid.Row="3"  Grid.Column="0" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="3"  Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player2LP[0]}"
+					SelectedItem="{Binding Player2LPs[0]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="1" IsVisible="{Binding ResultItem[0], Converter={StaticResource TheConverter}}"  BackgroundColor="LightGray">
+			<Grid Grid.Row="1" IsVisible="{Binding ResultItems[0], Converter={StaticResource TheConverter}}"  BackgroundColor="LightGray">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -68,25 +68,25 @@
 				<Label Text="{x:Static prop:AppResources.TextResult}" Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" />
 				<Label Text="{x:Static prop:AppResources.TextLifePoint}" Grid.Row="0" Grid.Column="1" FontSize="Medium" VerticalTextAlignment="Center" IsVisible="{Binding EnableLifePoint}" />
 				<Label Text="{x:Static prop:AppResources.Label2ndMatch}" Grid.Row="0" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItem[1].Player1Win}" />
+				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItems[1].Player1Win}" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="1" Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player1LP[1]}"
+					SelectedItem="{Binding Player1LPs[1]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player1.Name}" Grid.Row="1" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItem[1].Draw}" />
+				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItems[1].Draw}" />
 				<Label Text="Draw" Grid.Row="2"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch IsToggled="{Binding ResultItem[1].Player2Win}" Grid.Row="3"  Grid.Column="0" />
+				<Switch IsToggled="{Binding ResultItems[1].Player2Win}" Grid.Row="3"  Grid.Column="0" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="3"  Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player2LP[1]}"
+					SelectedItem="{Binding Player2LPs[1]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
 
-			<Grid Grid.Row="2" IsVisible="{Binding ResultItem[1], Converter={StaticResource TheConverter}}">
+			<Grid Grid.Row="2" IsVisible="{Binding ResultItems[1], Converter={StaticResource TheConverter}}">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -101,20 +101,20 @@
 				<Label Text="{x:Static prop:AppResources.TextResult}" Grid.Row="0" Grid.Column="0" FontSize="Medium" VerticalTextAlignment="Center" />
 				<Label Text="{x:Static prop:AppResources.TextLifePoint}" Grid.Row="0" Grid.Column="1" FontSize="Medium" VerticalTextAlignment="Center" IsVisible="{Binding EnableLifePoint}" />
 				<Label Text="{x:Static prop:AppResources.Label3rdMatch}" Grid.Row="0" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItem[2].Player1Win}" />
+				<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItems[2].Player1Win}" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="1" Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player1LP[2]}"
+					SelectedItem="{Binding Player1LPs[2]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player1.Name}" Grid.Row="1" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItem[2].Draw}" />
+				<Switch Grid.Row="2" Grid.Column="0" IsToggled="{Binding ResultItems[2].Draw}" />
 				<Label Text="Draw" Grid.Row="2"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
-				<Switch IsToggled="{Binding ResultItem[2].Player2Win}" Grid.Row="3"  Grid.Column="0" />
+				<Switch IsToggled="{Binding ResultItems[2].Player2Win}" Grid.Row="3"  Grid.Column="0" />
 				<Picker IsVisible="{Binding EnableLifePoint}"
 					Grid.Row="3"  Grid.Column="1"
 					ItemsSource ="{Binding LifePoints}"
-					SelectedItem="{Binding Player2LP[2]}"
+					SelectedItem="{Binding Player2LPs[2]}"
 					ItemDisplayBinding="{Binding Label}" />
 				<Label Text="{Binding Player2.Name}" Grid.Row="3"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
 			</Grid>
