--- a/BSMM2/BSMM2/Views/PlayerPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayerPage.xaml
@@ -5,7 +5,7 @@
 			 x:Class="BSMM2.Views.PlayerPage"
 			 xmlns:local="clr-namespace:BSMM2.ViewModels"
 			 Disappearing="OnClosing"
-			  Title="{Binding Name}">
+			 Title="{x:Static prop:AppResources.TextPlayerInformation}">
 	<ContentPage.Resources>
 		<local:RoundResultConverter x:Key="Converter" />
 	</ContentPage.Resources>
@@ -21,15 +21,14 @@
 				</Grid.ColumnDefinitions>
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
 				</Grid.RowDefinitions>
-				<Label Text="{x:Static prop:AppResources.TextPlayerParameterKey}" Grid.Row="0" Grid.Column="0" FontSize="Medium" />
-				<Label Text="{x:Static prop:AppResources.TextPlayerParameterValue}" Grid.Row="0" Grid.Column="1" FontSize="Medium" />
+				<Label Text="{x:Static prop:AppResources.TextPlayerName}" Grid.Row="0" Grid.Column="0" VerticalTextAlignment="Center" />
+				<Entry Text="{Binding Player.Name}"  Grid.Row="0" Grid.Column="1" />
+				<Label Text="{x:Static prop:AppResources.LabelDrop}" Grid.Row="1" Grid.Column="0" VerticalTextAlignment="Center" />
+				<Switch IsToggled="{Binding Dropped , Mode=TwoWay}" IsEnabled="{Binding IsMatching}" Grid.Row="1" Grid.Column="1" />
 			</Grid>
-			<StackLayout Orientation="Horizontal">
-				<Switch IsToggled="{Binding Dropped , Mode=TwoWay}" IsEnabled="{Binding IsMatching}" />
-				<Label Text="{x:Static prop:AppResources.LabelDrop}" VerticalTextAlignment="Center" FontSize="Medium" />
-			</StackLayout>
-			<Label Text="{x:Static prop:AppResources.LabelMatchLog}" FontSize="Medium" />
+			<Label Text="{x:Static prop:AppResources.LabelMatchLog}" />
 			<ListView x:Name="RoundListView"
 				ItemsSource="{Binding Player.Matches}"
 				VerticalOptions="FillAndExpand"
